--- a/templates/mission/index.html.twig
+++ b/templates/mission/index.html.twig
@@ -57,9 +57,17 @@
                             <a href="{{ path('app_mission_show', {'id': mission.id}) }}" class="btn btn-outline-primary btn-sm">
                                 <i class="fas fa-eye"></i> Voir
                             </a>
-                            <a href="{{ path('app_mission_edit', {'id': mission.id}) }}" class="btn btn-outline-warning btn-sm">
-                                <i class="fas fa-edit"></i> Modifier
-                            </a>
+                            {% if mission.statut.value == 'EN ATTENTE' %}
+                                <a href="{{ path('app_mission_edit', {'id': mission.id}) }}" class="btn btn-outline-warning btn-sm">
+                                    <i class="fas fa-edit"></i> Modifier
+                                </a>
+                                <form action="{{ path('app_mission_cancel', {'id': mission.id}) }}" method="post" style="display:inline;">
+                                    <input type="hidden" name="_token" value="{{ csrf_token('cancel' ~ mission.id) }}">
+                                    <button class="btn btn-outline-danger btn-sm" type="submit" onclick="return confirm('Êtes-vous sûr de vouloir annuler cette mission ?');">
+                                        <i class="fas fa-times"></i> Annuler
+                                    </button>
+                                </form>
+                            {% endif %}
                         </td>
                     </tr>
                 {% else %}
