--- a/templates/equipe/show.html.twig
+++ b/templates/equipe/show.html.twig
@@ -45,6 +45,16 @@
                                     </span>
                                 </td>
                             </tr>
+                            {% if not equipe.estActive and equipe.missionActuelle %}
+                                <tr>
+                                    <th class="bg-light text-danger">Mission en cours</th>
+                                    <td>
+                                        <span class="fw-bold text-primary">
+                                            {{ equipe.missionActuelle.titre }}
+                                        </span>
+                                    </td>
+                                </tr>
+                            {% endif %}
                         </tbody>
                     </table>
                 </div>
@@ -52,7 +62,6 @@
                     <a href="{{ path('app_equipe_index') }}" class="btn btn-outline-danger me-2">
                         <i class="fas fa-arrow-left"></i> Retour à la liste
                     </a>
-            
                 </div>
             </div>
         </div>
