Configuration de Equipe

--- a/templates/equipe/index.html.twig
+++ b/templates/equipe/index.html.twig
@@ -76,7 +76,7 @@
 
     <!-- Bouton créer une nouvelle équipe -->
     <div class="text-center mt-4">
-        <a href="{{ path('app_equipe_new') }}" class="btn btn-success btn-lg">
+        <a href="{{ path('app_equipe_new') }}" class="btn btn-danger">
             <i class="fas fa-plus"></i> Créer une nouvelle Équipe
         </a>
     </div>
